--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ code {
     @apply bg-gradient-to-br from-rose-600 to-red-400 hover:from-red-400 hover:to-rose-600;
   }
   .bg-gradient-white {
-    @apply to-neutral-100 hover:from-neutral-100 bg-gradient-to-br from-slate-400 hover:to-slate-400;
+    @apply bg-gradient-to-br from-base-100 to-slate-400 hover:from-slate-400 hover:to-base-100;
   }
   .bg-gradient-upscayl {
     @apply bg-gradient-to-br from-[#7741ff] to-[#af55ff] hover:from-[#af55ff] hover:to-[#7741ff];
